Fix bug with sidebar/display width overlap

--- a/src/styles/effects.css
+++ b/src/styles/effects.css
@@ -39,9 +39,9 @@
 }
 
 
-/* view preference hover */
-/* view preference hover */
-/* view preference hover */
+/* ! view preference hover */
+/* ! view preference hover */
+/* ! view preference hover */
 
 .view-prefs-container ul li {
     border-radius: 0.5em;
@@ -114,6 +114,8 @@
 }
 
 .hide-sidebar {
-    transform: translateX(-25vw);
-    -webkit-transform: translateX(-25vw);
+    /* transform: translateX(-25vw); */
+    /* -webkit-transform: translateX(-25vw); */
+    transform: translateX(clamp(-200px, -25vw, -300px));
+    -webkit-transform: translateX(clamp(-200px, -25vw, -300px));
 }
